# TrenzyApp

./: .gitignore  CHANGES.md  README.md  TODO.md  firebase.json  pubspec.yaml  start.sh
android/: proguard-rules.pro  settings.gradle.kts
android/app/: build.gradle.kts
backend/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  blend_helpers.py  config.py  db.py  firebase_auth.py  import_products.py  main.py  models.py  models_notifications.py  models_payments.py  models_payments_patch.py  schemas.py  socket_server.py
backend/app/routes/: __init__.py  auth.py  decisions.py  friends.py  groups.py  invitations.py  messages.py  notifications.py  products.py  schemas.py  suggestions.py  trends.py  users.py  wishlist.py
backend/app/scripts/: fix_placeholder_images.py  load_hf_products.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  firebase_options.dart  main.dart
lib/analytics/: analytics_service.dart
lib/models/: api_exception.dart  blend_model.dart  decision_flow.dart  friend_model.dart  group_message.dart  notification_item.dart  product_model.dart  social_room_state.dart  trend_model.dart  user_model.dart
lib/providers/: analytics_service_provider.dart  api_service_provider.dart  auth_listeners.dart  auth_provider.dart  blend_provider.dart  friends_provider.dart  products_provider.dart  recently_viewed_provider.dart  suggestion_provider.dart  trends_provider.dart  user_stats_provider.dart  wishlist_provider.dart
lib/router/: app_router.dart
web/: index.html  manifest.json
(+43 files in other folders)
