[tool.poetry]
name = "backend_fastapi"
version = "0.1.0"
description = "FastAPI backend for VibeCart"
authors = ["blackboxai"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
PyJWT = "^2.9.0"
firebase-admin = "^6.6.0"
httpx = "^0.27.0"
python-socketio = "^5.11.0"

# Postgres
SQLAlchemy = "^2.0.32"
psycopg = {extras = ["binary"], version = "^3.2.1"}
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

